--- a/kzeng-notes/NES-Parser.ipynb
+++ b/kzeng-notes/NES-Parser.ipynb
@@ -371,6 +371,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('BattKid2.nes', 512.0), ('LionKin3.nes', 512.0), ('Rockman4.nes', 512.0), ('Rockman5.nes', 512.0), ('Rockman6.nes', 512.0), ('SpShinob.nes', 512.0), ('TinyTon6.nes', 512.0), ('Turtles2.nes', 512.0), ('Turtles3.nes', 512.0), ('AIsland4.nes', 384.0), ('Batman2.nes', 384.0), ('Batman3.nes', 384.0), ('Flintst1.nes', 384.0), ('Flintst2.nes', 384.0), ('Gremlins.nes', 384.0), ('G_I_Joe1.nes', 384.0), ('G_I_Joe2.nes', 384.0), ('MetalStm.nes', 384.0), ('Rockman3.nes', 384.0), ('SeireiDL.nes', 384.0), ('SilverSu.nes', 384.0), ('SpMario3.nes', 384.0), ('Tsubasa2.nes', 384.0), ('Ultraman.nes', 384.0), ('AIsland2.nes', 256.0), ('AIsland3.nes', 256.0), ('astyanax.nes', 256.0), ('BadDudes.nes', 256.0), ('Batman1.nes', 256.0), ('BattKid1.nes', 256.0), ('Bayoubil.nes', 256.0), ('BuckyOHa.nes', 256.0), ('CaptAmer.nes', 256.0), ('Castlev2.nes', 256.0), ('Chipdal1.nes', 256.0), ('Chipdal2.nes', 256.0), ('Chipdal3.nes', 256.0), ('CodViper.nes', 256.0), ('Contra1J.NES', 256.0), ('Contra2J.NES', 256.0), ('Contra_F.nes', 256.0), ('CrosFire.nes', 256.0), ('DarkDuck.nes', 256.0), ('DbDragn1.nes', 256.0), ('DbDragn2.nes', 256.0), ('DbDragn3.nes', 256.0), ('DbDragn4.nes', 256.0), ('DragFigh.nes', 256.0), ('Felixcat.nes', 256.0), ('FMission.nes', 256.0), ('GoldMedl.nes', 256.0), ('Guerrill.nes', 256.0), ('Gun_Dec.nes', 256.0), ('HeavyBar.nes', 256.0), ('Ikari_2.nes', 256.0), ('Ikari_3.nes', 256.0), ('Jackchan.nes', 256.0), ('Jurassic.nes', 256.0), ('Kage.nes', 256.0), ('KickMast.nes', 256.0), ('Matendou.nes', 256.0), ('Mightyff.nes', 256.0), ('Mitsume.nes', 256.0), ('Monster.nes', 256.0), ('NekBaskt.nes', 256.0), ('NekDodge.nes', 256.0), ('NekHocky.nes', 256.0), ('NekKakut.nes', 256.0), ('NekKoush.nes', 256.0), ('NekMonog.nes', 256.0), ('NekShink.nes', 256.0), ('NekSocer.nes', 256.0), ('NekSocLg.nes', 256.0), ('NGaiden1.nes', 256.0), ('NGaiden2.nes', 256.0), ('NGaiden3.nes', 256.0), ('NinjaCat.nes', 256.0), ('NinjBros.nes', 256.0), ('OverHori.nes', 256.0), ('PajamaHe.nes', 256.0), ('Parodius.nes', 256.0), ('Pokemon.nes', 256.0), ('PwBlade1.nes', 256.0), ('PwBlade2.nes', 256.0), ('P_O_W.nes', 256.0), ('Robocop1.nes', 256.0), ('Robocop2.nes', 256.0), ('Robocop3.nes', 256.0), ('Robocop4.nes', 256.0), ('RockBord.nes', 256.0), ('Rockman2.nes', 256.0), ('Saiyuuk2.nes', 256.0), ('SilkWorm.nes', 256.0), ('SnowBros.nes', 256.0), ('Spartan2.nes', 256.0), ('SpMario2.nes', 256.0), ('SwordMst.nes', 256.0), ('Termina1.nes', 256.0), ('Termina2.nes', 256.0), ('TinyTon1.nes', 256.0), ('TinyTon2.nes', 256.0), ('TinyTon4.nes', 256.0), ('TinyTon5.nes', 256.0), ('TokkShir.nes', 256.0), ('TopSecrt.nes', 256.0), ('Tsubasa1.nes', 256.0), ('Turtles1.nes', 256.0), ('Turtles4.nes', 256.0), ('WaiWorld.nes', 256.0), ('1943.nes', 128.0), ('1944.nes', 128.0), ('Argos.nes', 128.0), ('Castlev1.nes', 128.0), ('Crusader.nes', 128.0), ('Gunsmoke.nes', 128.0), ('Ikari_1.nes', 128.0), ('Jackal.nes', 128.0), ('LegWings.nes', 128.0), ('LifeForc.nes', 128.0), ('NekKunio.nes', 128.0), ('Rockman1.nes', 128.0), ('Rushnatt.nes', 128.0), ('Saiyuuk1.nes', 128.0), ('SidePckt.nes', 128.0), ('Thuncade.nes', 128.0), ('TinyTon3.nes', 128.0), ('Worldcup.nes', 128.0), ('Zanac_m4.nes', 128.0), ('AIsland1.nes', 64.0), ('Saiyuuki.nes', 64.0), ('Trckfild.nes', 64.0), ('Dr_Mario.nes', 56.0), ('MarioBrs.nes', 40.0), ('SpartanX.nes', 40.0), ('SpMario1.nes', 40.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 生成 ROMFILE 优化版本\n",
+    "## 文件名: Testnes.idx\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ...\n",
+    "import os\n",
+    "import time\n",
+    "from openpyxl import load_workbook,Workbook\n",
+    "\n",
+    "\n",
+    "source_file = './Nes-Games-List.xlsx'\n",
+    "idx_file = \"./Testnes1.idx\"\n",
+    "\n",
+    "little_file_start_addr = '0000010'\n",
+    "rom_size_sum = 0\n",
+    "\n",
+    "# f = open(idx_file, 'w')\n",
+    "# f.write(\"F_Reset.bin \\t 0000000 \\t 007E000 \\n\")\n",
+    "\n",
+    "wb = load_workbook(source_file)\n",
+    "ws1 = wb[\"Sheet1\"]\n",
+    "\n",
+    "the_first_item = True\n",
+    "\n",
+    "nes_files_dict = {}\n",
+    "\n",
+    "for row in ws1.iter_rows(min_row=2):\n",
+    "    rom_size = int(row[5].value) * 16 * 1024 + int(row[6].value) * 8 * 1024\n",
+    "    nes_files_dict.update( {row[4].value: rom_size/1024} )\n",
+    "    nes_files_dict_sorted = sorted(nes_files_dict.items(), key=lambda nes_files_dict: nes_files_dict[1], reverse=True)\n",
+    "\n",
+    "\n",
+    "#     f.write(\"{} \\t {} \\t {} \\n\".format(row[4].value, little_file_start_addr, '{:07x}'.format(rom_size_sum).upper() ))\n",
+    "# f.close()\n",
+    "\n",
+    "# print('Create ' + idx_file + ' Ok!')\n",
+    "                          \n",
+    "print(nes_files_dict_sorted)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
